Add transaction form validation

--- a/Client/src/app/add-transaction/add-transaction.component.html
+++ b/Client/src/app/add-transaction/add-transaction.component.html
@@ -1,73 +1,154 @@
-<form action="#" class="transaction-form needs-validation">
+<form (ngSubmit)="onSubmit()" #transactionForm="ngForm" class="transaction-form needs-validation">
     <div class="cards">
         <div class="card">
-        <div class="card_item">
-            <label for="dfname"><span class="error">*</span>Debtor first name:</label>
-            <input type="text" id="dfname" name="dfname" #debtorFirstName required>
-            <div class="valid-feedback">
-                Looks good!
+            <div class="card_item">
+                <label for="debtorFirstName"><span class="error">*</span>Debtor first name:</label>
+                <input type="text" id="debtorFirstName" 
+                name="debtorFirstName" 
+                #debtorFirstName="ngModel" 
+                minlength="4"
+                maxlength="30"
+                required [(ngModel)]="transaction.debtorFirstName">
             </div>
-            <div class="invalid-feedback">
-                Please choose a first name for debtor.
+            <div [hidden]="debtorFirstName.valid || debtorFirstName.pristine"
+                class="alert alert-danger">
+                Debtor First Name is too short
             </div>
-        </div>
 
-        <div class="card_item">
-            <label for="dlname"><span class="error">*</span>Debtor last name:</label>
-            <input type="text" id="dlname" name="dlname" #debtorLastName required>
-        </div>
+            <div class="card_item">
+                <label for="debtorLastName"><span class="error">*</span>Debtor last name:</label>
+                <input type="text" id="debtorLastName" 
+                name="debtorLastName" 
+                #debtorLastName="ngModel" 
+                minlength="4"
+                maxlength="30"
+                required [(ngModel)]="transaction.debtorLastName">
+            </div>
+            <div [hidden]="debtorLastName.valid || debtorLastName.pristine"
+            class="alert alert-danger">
+                Debtor Last Name is too short
+            </div>
 
-        <div class="card_item">
-            <label for="dac"><span class="error">*</span>Debtor account number:</label>
-            <input type="text" id="dac" name="dac" #debtorAccountNumber required>
-        </div>
+            <div class="card_item">
+                <label for="debtorAccountNumber"><span class="error">*</span>Debtor account number:</label>
+                <input type="text" id="debtorAccountNumber" 
+                name="debtorAccountNumber" 
+                #debtorAccountNumber="ngModel" 
+                minlength="4"
+                maxlength="6"
+                required [(ngModel)]="transaction.debtorAccountNumber">
+            </div>
+            <div [hidden]="debtorAccountNumber.valid || debtorAccountNumber.pristine"
+            class="alert alert-danger">
+                Debtor Account number must be [4-6] symbols
+            </div>
 
-        <div class="card_item">
-            <label for="dbi"><span class="error">*</span>Debtor bank id:</label>
-            <input type="text" id="dbi" name="dbi" #debtorBankId required>
-        </div>
+            <div class="card_item">
+                <label for="debtorBankId"><span class="error">*</span>Debtor bank id:</label>
+                <input type="text" id="debtorBankId" 
+                name="debtorBankId"
+                #debtorBankId="ngModel" 
+                minlength="4"
+                maxlength="4"
+                required [(ngModel)]="transaction.debtorBankId">
+            </div>
+            <div [hidden]="debtorBankId.valid || debtorBankId.pristine"
+            class="alert alert-danger">
+                Debtor bank ID has to be 4 symbols
+            </div>
         </div>
 
         <div class="card">
-        <div class="card_item">
-            <label for="cfname"><span class="error">*</span>Creditor first name:</label>
-            <input type="text" id="cfname" name="cfname" #creditorFirstName required>
-        </div>
+            <div class="card_item">
+                <label for="creditorFirstName"><span class="error">*</span>Creditor first name:</label>
+                <input type="text" id="creditorFirstName"
+                name="creditorFirstName" 
+                #creditorFirstName="ngModel" 
+                minlength="4"
+                maxlength="30"
+                required [(ngModel)]="transaction.creditorFirstName">
+            </div>
+            <div [hidden]="creditorFirstName.valid || creditorFirstName.pristine"
+            class="alert alert-danger">
+                Creditor First Name is too short
+            </div>
 
-        <div class="card_item">
-            <label for="clname"><span class="error">*</span>Creditor last name:</label>
-            <input type="text" id="clname" name="clname" #creditorLastName required>
-        </div>
+            <div class="card_item">
+                <label for="creditorLastName"><span class="error">*</span>Creditor last name:</label>
+                <input type="text" id="creditorLastName" 
+                name="creditorLastName" 
+                #creditorLastName="ngModel" 
+                minlength="4"
+                maxlength="30"
+                required [(ngModel)]="transaction.creditorLastName">
+            </div>
+            <div [hidden]="creditorLastName.valid || creditorLastName.pristine"
+            class="alert alert-danger">
+                Creditor Last Name is too short
+            </div>
 
-        <div class="card_item">
-            <label for="cac"><span class="error">*</span>Creditor account number:</label>
-            <input type="text" id="cac" name="cac" #creditorAccountNumber required>
-        </div>
+            <div class="card_item">
+                <label for="creditorAccountNumber"><span class="error">*</span>Creditor account number:</label>
+                <input type="text" id="creditorAccountNumber" 
+                name="creditorAccountNumber" 
+                #creditorAccountNumber="ngModel" 
+                minlength="4"
+                maxlength="6"
+                required [(ngModel)]="transaction.creditorAccountNumber">
+            </div>
+            <div [hidden]="creditorAccountNumber.valid || creditorAccountNumber.pristine"
+            class="alert alert-danger">
+                Creditor Account number must be [4-6] symbols
+            </div>
 
-        <div class="card_item">
-            <label for="cbi"><span class="error">*</span>Creditor bank id:</label>
-            <input type="text" id="cbi" name="cbi" #creditorBankId required>
-        </div>
+            <div class="card_item">
+                <label for="creditorBankId"><span class="error">*</span>Creditor bank id:</label>
+                <input type="text" id="creditorBankId" 
+                name="creditorBankId" 
+                #creditorBankId="ngModel" 
+                minlength="4"
+                maxlength="4"
+                required [(ngModel)]="transaction.creditorBankId">
+            </div>
+            <div [hidden]="creditorBankId.valid || creditorBankId.pristine"
+            class="alert alert-danger">
+                Creditor bank ID has to be 4 symbols
+            </div>
         </div>
 
         <div class="card">
-        <div class="card_item">
-            <label for="tamount"><span class="error">*</span>Amount:</label>
-            <input type="text" id="tamount" name="tamount" #amount required>
-        </div>
+            <div class="card_item">
+                <label for="amount"><span class="error">*</span>Amount:</label>
+                <input type="text" id="amount" 
+                name="amount" 
+                #amount="ngModel" 
+                maxlength="5"
+                max="15000"
+                required [(ngModel)]="transaction.amount">
+            </div>
+            <div [hidden]="amount.valid || amount.pristine"
+            class="alert alert-danger">
+                Amount is required
+            </div>
 
-        <div class="card_item">
-            <label for="transactionId"><span class="error">*</span>Transaction ID:</label>
-            <input type="text" id="transactionId" name="transactionId" #transactionId required>
-        </div>
+            <div class="card_item">
+                <label for="transactionId"><span class="error">*</span>Transaction ID:</label>
+                <input type="text" id="transactionId" 
+                name="transactionId" 
+                #transactionId="ngModel" 
+                required [(ngModel)]="transaction.transactionId">
+            </div>
+            <div [hidden]="transactionId.valid || transactionId.pristine"
+            class="alert alert-danger">
+                Transaction ID is required
+            </div>
         </div>
 
         <div class="center text-center">
-            <input type="submit" value="Submit" class="btn btn-primary center button-wide" (click)="addTransaction(
-                debtorFirstName.value, debtorLastName.value, debtorAccountNumber.value, debtorBankId.value,
-                creditorFirstName.value, creditorLastName.value, creditorAccountNumber.value, creditorBankId.value,
-                amount.value, transactionId.value
-            )">
+            <button type="submit" class="btn btn-primary center button-wide" 
+                [disabled]="!transactionForm.form.valid">
+                Submit
+            </button>
         </div>
     </div>
 </form> 
