--- a/Client/src/app/add-transaction/add-transaction.component.scss
+++ b/Client/src/app/add-transaction/add-transaction.component.scss
@@ -8,7 +8,7 @@
 }
 
 .cards {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -33,6 +33,15 @@
     justify-content: space-between;
     margin: 2% 0 2% 0;
   }
+}
+
+.ng-valid[required],
+.ng-valid.required {
+  border-left: 5px solid #42a948;
+}
+
+.ng-invalid:not(form) {
+  border-left: 5px solid #a94442;
 }
 
 @media screen and (max-width: 992px) {
