--- a/Client/src/app/add-transaction/add-transaction.component.html
+++ b/Client/src/app/add-transaction/add-transaction.component.html
@@ -1,4 +1,12 @@
 <form (ngSubmit)="onSubmit()" #transactionForm="ngForm" class="transaction-form needs-validation">
+    <div class="row center d-flex content-center"  *ngIf="showMsg">
+        <div class="col-xs-12">
+          <p class="alert alert-success">
+              <strong>Transaction posted</strong> Thanks!.
+          </p>
+        </div>
+      </div>
+
     <div class="cards">
         <div class="card">
             <div class="card_item">
@@ -122,25 +130,14 @@
                 <input type="text" id="amount" 
                 name="amount" 
                 #amount="ngModel" 
-                maxlength="5"
+                type="number"
+                maxlength="20"
                 max="15000"
                 required [(ngModel)]="transaction.amount">
             </div>
             <div [hidden]="amount.valid || amount.pristine"
             class="alert alert-danger">
                 Amount is required
-            </div>
-
-            <div class="card_item">
-                <label for="transactionId"><span class="error">*</span>Transaction ID:</label>
-                <input type="text" id="transactionId" 
-                name="transactionId" 
-                #transactionId="ngModel" 
-                required [(ngModel)]="transaction.transactionId">
-            </div>
-            <div [hidden]="transactionId.valid || transactionId.pristine"
-            class="alert alert-danger">
-                Transaction ID is required
             </div>
         </div>
 
