add status and date to the transaction list component

--- a/Client/src/app/transactions-list/transactions-list.component.html
+++ b/Client/src/app/transactions-list/transactions-list.component.html
@@ -17,6 +17,10 @@
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.AMOUNT' | translate }}: {{ transaction.amount }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.TRANSACTIONID' | translate }}: {{ transaction.transactionId }}</div>
             </div>
+            <div class="center mark">
+                <div class="mt-2 mb-2">{{ 'TRANSACTION.STATUS' | translate }}: {{ transaction.status }}</div>
+                <div class="mt-2 mb-2">{{ 'TRANSACTION.DATE' | translate }}: {{ transaction.dateStatusChanged }}</div>
+            </div>
         </li>
     </ul>
 </aside>
