--- a/Client/src/app/transactions-list/transactions-list.component.scss
+++ b/Client/src/app/transactions-list/transactions-list.component.scss
@@ -6,5 +6,10 @@
 .transactions_item {
   margin: 2% 0 2% 0;
   padding: 1%;
+  background-color: #ccc;
   list-style: none;
+}
+
+.button-wide {
+  width: 100%;
 }
