Fix cancel transaction part styles

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -9,7 +9,7 @@
     </select>
   </label>
   <section class="asides">
-    <section class="text-center mt-5 aside">
+    <section class="text-center mt-5 aside aside-wider">
       <h2 class="display-5">{{ 'HOME.ASIDES.VIEWTRANSACTIONS' | translate }}</h2>
       <div class="scrollable">
         <app-transactions-list></app-transactions-list>
