--- a/Client/src/app/transactions-list/transactions-list.component.scss
+++ b/Client/src/app/transactions-list/transactions-list.component.scss
@@ -6,8 +6,10 @@
 .transactions_item {
   margin: 2% 0 2% 0;
   padding: 1%;
-  background-color: #ccc;
+  border: 5px solid #333;
   list-style: none;
+  font-size: 1.3em;
+  line-height: 2em;
 }
 
 .button-wide {
