--- a/Client/src/app/transactions-list/transactions-list.component.html
+++ b/Client/src/app/transactions-list/transactions-list.component.html
@@ -1,23 +1,23 @@
 <aside class="list" *ngIf="!loading">
     <ul class="transactions">
         <li class="transactions_item" *ngFor="let transaction of transactionService.transactions; let i = index;">
-            <div class="center mark">
+            <div class="center">
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.DEBTORFIRSTNAME' | translate }}: {{ transaction.debtorFirstName }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.DEBTORLASTNAME' | translate }}: {{ transaction.debtorLastName }}</div> 
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.DEBTORACCOUNTNUMBER' | translate }}: {{ transaction.debtorAccountNumber }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.DEBTORBANKID' | translate }}: {{ transaction.debtorBankId }}</div> 
             </div>
-            <div class="center mark">
+            <div class="center">
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.CREDITORFIRSTNAME' | translate }}: {{ transaction.creditorFirstName }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.CREDITORLASTNAME' | translate }}: {{transaction.creditorLastName }}</div> 
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.CREDITORACCOUNTNUMBER' | translate }}: {{ transaction.creditorAccountNumber }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.CREDITORBANKID' | translate }}: {{transaction.creditorBankId }}</div> 
             </div>
-            <div class="center mark">
+            <div class="center">
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.AMOUNT' | translate }}: {{ transaction.amount }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.TRANSACTIONID' | translate }}: {{ transaction.transactionId }}</div>
             </div>
-            <div class="center mark">
+            <div class="center">
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.STATUS' | translate }}: {{ transaction.status }}</div>
                 <div class="mt-2 mb-2">{{ 'TRANSACTION.DATE' | translate }}: {{ transaction.dateStatusChanged }}</div>
             </div>
