--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
+    backdrop-filter: blur(4px);
+}
